# blueking-apigateway

./: .code.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  README_EN.md  bk-sec-todo.md  bkpkg-bk_apigateway.yaml
src/dashboard/: .gitignore  AGENTS.md  Dockerfile  Dockerfile.sdk-worker  Makefile  README.md  editionctl.toml  poetry.toml  pyproject.toml  tox.ini
src/dashboard/apigateway/: .importlinter  MCP_SERVER_CATEGORY_SUMMARY.md  Makefile  manage.py  requirements.txt  requirements_dev.txt  wsgi.py
src/dashboard/apigateway/apigateway/: settings.py  urls.py
src/dashboard/apigateway/apigateway/account/: apps.py  backends.py  middlewares.py  models.py  urls.py  utils.py  views.py
src/dashboard/apigateway/apigateway/apigateway/: __init__.py  apps.py  celery.py
src/dashboard/apigateway/apigateway/apis/: AGENTS.md  backend_config.py
src/dashboard/apigateway/apigateway/biz/: AGENTS.md  audit.py  backend.py  constants.py  context.py  gateway.py  gateway_app_binding.py  gateway_jwt.py  gateway_label.py  gateway_related_app.py  gateway_type.py  iam.py  itsm.py  mcp_server.py  monitor.py  permission.py  plugin_binding.py  release.py  released_resource.py  releaser.py  releasers.py  resource.py  resource_label.py  resource_openapi_schema.py  resource_url.py  resource_version.py  resource_version_diff.py  slz_validators.py  stage.py  stage_resource_disabled.py  validators.py
src/dashboard/apigateway/apigateway/common/: admin.py  constants.py  encrypt.py  env.py  error_codes.py  es_clients.py  exception_handler.py  exceptions.py  fields.py  funcs.py  gateway_limits.py  mcryptography.py  pagination.py  renderers.py  security.py  signature.py  swagger.py  time.py  timeout.py  user_credentials.py  validators.py
src/dashboard/apigateway/apigateway/components/: __init__.py  ai.py  bcs.py  bcs_helper.py  bk_iam_bkapi.py  bk_log.py  bkaidev.py  bkauth.py  bkcmsi.py  bkdata.py  bkitsm.py  bklog.py  bkmonitor.py  bkpaas.py  bkrepo.py  bkuser.py  chart.py  cmsi.py  component.py  esb_components.py  exceptions.py  handler.py  http.py  paas.py  paasv3.py  prometheus.py  utils.py
src/dashboard/apigateway/apigateway/conf/: .env.tpl  celery_conf.py  default.py  log_utils.py  settings_dev.py  settings_prod.py  unittest_env  utils.py
src/dashboard/apigateway/apigateway/controller/: AGENTS.md  apps.py  constants.py  convertor.py  exceptions.py  micro_gateway_config.py  release_data.py  release_logger.py  transformer.py  uri_render.py
src/dashboard/apigateway/apigateway/core/: AGENTS.md  admin.py  ai_backend.py  api_auth.py  apps.py  backend_config.py  backend_config_schema.py  constants.py  gateway_auth.py  managers.py  micro_gateway_config.py  models.py  scopes.py  signals.py  utils.py  validators.py
src/dashboard/apigateway/apigateway/fixtures/: plugins.yaml
src/dashboard/apigateway/apigateway/healthz/: apps.py  urls.py  views.py
src/dashboard/apigateway/apigateway/iam/: admin.py  apps.py  constants.py  exceptions.py  models.py
src/dashboard/apigateway/apigateway/notice/: urls.py  views.py
src/dashboard/apigateway/apigateway/schema/: admin.py  apps.py  constants.py  instances.py  managers.py  models.py
src/dashboard/apigateway/apigateway/service/: AGENTS.md  alarm_strategy.py  backend.py  bk_itsm.py  data_plane.py  gateway_jwt.py  gateway_label.py  openapi_export.py  paas.py  publish_validator.py  release.py  resource_cleanup.py  resource_doc.py  resource_doc_version.py  resource_snapshot.py  resource_version_schema.py  statistics.py  utils.py
src/dashboard/apigateway/apigateway/tests/: conftest.py
src/dashboard/apigateway/apigateway/tracing/: constants.py  instrumentor.py  otel.py
src/dashboard/apigateway/apigateway/utils/: access_token.py  archivefile.py  bk_ticket.py  cipher.py  command.py  conv.py  crypto.py  curlify.py  db_router.py  dict.py  django.py  etcd.py  etcd_monkeypatch.py  exception.py  factory.py  file.py  filterset.py  git.py  header.py  http.py  ip.py  jinja2.py  list.py  local.py  maven.py  measurement.py  openapi.py  paginator.py  procedure_logger.py  pypi.py  redis_publisher.py  redis_utils.py  responses.py  sensitive_cleaner.py  serializers.py  singleton.py  string.py  swagger.py  template.py  time.py  (+3 more)
src/dashboard/docs/: sdk-worker-deployment.md
src/dashboard/scripts/: check_api_consistency.py  config.yaml
src/dashboard/sdk-worker-smoke/: minimal-openapi.yaml  run.py  run.sh
src/esb/: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
src/esb/esb/: babel.po  dependencies.yaml  manage.py  requirements.txt  requirements_dev.txt  settings.py  urls.py  wsgi.py
src/esb/esb/apps/operate_perm/: base.py  cc_perm.py
src/esb/esb/apps/sdk_management/: constants.py  utils.py
src/esb/esb/common/: base_loggers.py  base_utils.py  base_validators.py  bkerrors.py  constants.py  django_utils.py  djmysql_pool.py  errors.py  file.py  flocale.py  forms.py  log.py  singleton.py
src/esb/esb/common/mixins/: models.py
src/esb/esb/components/: component.py  constants.py  esb_conf.py  urls.py
src/esb/esb/conf/: default.py  log_utils.py  settings_dev.py  settings_prod.py  unittest_env
src/esb/esb/esb/: __init__.py  apps.py  jinja2.py  middlewares.py  outgoing.py  response.py  routers.py  views.py
src/esb/esb/esb/bkapp/: helpers.py  models.py  validators.py
src/esb/esb/esb/bkauth/: models.py  validators.py
src/esb/esb/esb/bkcore/: apps.py  constants.py  managers.py  models.py
src/esb/esb/esb/channel/: __init__.py  base.py  db_channel.py
src/esb/esb/esb/component/: __init__.py  base.py
src/esb/esb/esb/compperm/: validators.py
src/esb/esb/esb/gateway/: helpers.py  validators.py
src/esb/esb/esb/paas2/: apps.py  models.py
src/esb/esb/esb/utils/: __init__.py  base.py  confapis.py  config.py  db_router.py  esb_config.py  func_ctrl.py  jwt_utils.py  thread.py
src/esb/esb/healthz/: checklist.txt  urls.py  utils.py  views.py  views_check_codename.py
src/esb/esb/tests/: conftest.py  test_first.py
src/esb/esb/tests/common/: test_base_utils.py  test_base_validators.py  (+2 more)
(+4385 files in other folders)
