[project]
name = "apigateway-dashboard"
version = "1.0.0"
description = ""
authors = []
requires-python = ">=3.14,<3.15"
dependencies = [
    "django==5.2.15",
    "packaging==26.2",
    "djangorestframework==3.17.1",
    "pymysql==1.2.0",
    "celery==5.6.3",
    "django-celery-beat==2.9.0",
    "gevent==26.5.0",
    "requests==2.34.2",
    "arrow==1.4.0",
    "raven==6.10.0",
    "cachetools==7.1.4",
    "gunicorn==26.0.0",
    "jsonschema==4.26.0",
    "drf-yasg==1.21.15",
    "whitenoise==6.12.0",
    "python-json-logger==4.1.0",
    "django-cors-headers==4.9.0",
    "elasticsearch==7.17.13",
    "elasticsearch-dsl==7.4.1",
    "werkzeug==3.1.8",
    "redis==6.2.0",
    "ruamel.yaml==0.19.1",
    "pyyaml==6.0.3",
    "PyJWT==2.13.0",
    "pydantic==2.13.4",
    "django-environ==0.14.0",
    "jsonfield==3.2.0",
    "importlib-metadata==9.0.0",
    "greenlet==3.5.3",
    "bkpaas-auth==4.1.1",
    "blue-krill==3.1.1",
    "bk-crypto-python-sdk==3.0.0",
    "cryptography==49.0.0",
    "apigw-manager==5.0.1",
    "bkapi-client-generator==0.1.30",
    "curlify==2.2.1",
    "bkapi-component-open>=1.0.3,<2",
    "django-prometheus==2.5.0",
    "bkapi-client-core==1.2.0",
    "python-redis-lock==4.0.1",
    "etcd3==0.12.0",
    "grpcio==1.81.1",
    "protobuf==7.35.1",
    "bkapi-bk-apigateway>=1.0.12,<2",
    "docutils>=0.20.1",
    "Pygments==2.20.0",
    "Pillow==12.3.0",
    "opentelemetry-api==1.43.0",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-exporter-otlp==1.43.0",
    "opentelemetry-instrumentation-django==0.64b0",
    "opentelemetry-instrumentation-dbapi==0.64b0",
    "opentelemetry-instrumentation-redis==0.64b0",
    "opentelemetry-instrumentation-requests==0.64b0",
    "opentelemetry-instrumentation-logging==0.64b0",
    "opentelemetry-instrumentation-celery==0.64b0",
    "django-filter==25.2",
    "django-add-default-value==0.10.0",
    "pypi-simple==1.8.0",
    "bk-notice-sdk==1.4.2",
    "twine==6.2.0",
    "jinja2==3.1.6",
    "setuptools==82.0.1",
    "pycryptodomex==3.23.0",
    "certifi==2026.6.17",
    "sqlparse==0.5.5",
    "future==1.0.0",
    "openapi-spec-validator>=0.7.2,<0.8",
    "prance>=23.6.21.0,<24",
    "py-openapi-schema-to-json-schema==0.0.3",
    "faker==40.28.1",
    "concurrent-log-handler==0.9.29",
    "djangoql==0.19.1",
    "openai==1.88.0",
]

[dependency-groups]
dev = [
    "nose==1.3.7",
    "django-nose==1.4.7",
    "coverage==7.14.3",
    "django-dynamic-fixture==4.0.1",
    "pytest-xdist==3.8.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-benchmark==5.2.3",
    "pytest-mock==3.15.1",
    "pytest-pretty==1.3.0",
    "Faker==40.28.1",
    "responses==0.26.1",
    "pre-commit==4.6.0",
    "mypy==2.1.0",
    "rope==1.14.0",
    "watchdog==6.0.0",
    "tox==4.56.1",
    "ipython==9.15.0",
    "fakeredis==2.36.2",
    "ruff==0.15.20",
    "types-requests==2.33.0.20260518",
    "types-python-dateutil==2.9.0.20260518",
    "types-redis==4.6.0.20241004",
    "types-cachetools==7.0.0.20260518",
    "types-pytz==2026.2.0.20260518",
    "types-docutils==0.22.3.20260518",
    "types-PyYAML==6.0.12.20260518",
    "types-PyMySQL==1.1.0.20260518",
    "import-linter==2.12",
]

[tool.uv]
package = false

[[tool.uv.index]]
# url = "https://mirrors.tencent.com/pypi/simple"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
etcd3 = { git = "https://github.com/kragniz/python-etcd3.git", rev = "e58a899579ba416449c4e225b61f039457c8072a" }


[tool.mypy]
ignore_missing_imports = true
follow_imports="skip"
no_implicit_optional = true
show_error_codes = true
strict_optional=true
pretty=true
exclude = '''(?x)(
    editions.*\.py$
)'''

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.conf.*",
    "*.editions.*",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-p no:pastebin -p no:nose -p no:doctest -p no:warnings"
testpaths = [
    "apigateway/apigateway/tests"
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
]

# Same as Black.
line-length = 119

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "F",
    "W",
    "I",
    "C90",
    "B",
    "PIE",
    "C4",
    "PL",
    "RET",
    "N",
    "PERF",
    "G",
    "TRY",
    "SIM",
    "LOG",
    "Q",
    "TID",
    "TC",
]

# Disable E501 until this issue is fixed: https://github.com/astral-sh/ruff/issues/3825
ignore = [
    # https://beta.ruff.rs/docs/rules/assert-raises-exception/
    "B017",
    # https://beta.ruff.rs/docs/rules/raise-without-from-inside-except/
    "B904",
    # https://beta.ruff.rs/docs/rules/zip-without-explicit-strict/
    "B905",
    # https://beta.ruff.rs/docs/rules/line-too-long/
    "E501",
    # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "E741",
    # https://beta.ruff.rs/docs/rules/unused-variable/
    "F841",
    # https://beta.ruff.rs/docs/rules/error-suffix-on-exception-name/
    "N818",
    # https://beta.ruff.rs/docs/rules/try-except-in-loop/
    "PERF203",
    # https://beta.ruff.rs/docs/rules/too-many-arguments/
    "PLR0913",
    # https://beta.ruff.rs/docs/rules/raise-vanilla-args/
    "TRY003",
    # https://beta.ruff.rs/docs/rules/try-consider-else/
    "TRY300",
    # https://beta.ruff.rs/docs/rules/raise-within-try/
    "TRY301",
    # https://beta.ruff.rs/docs/rules/magic-value-comparison/
    "PLR2004",
    # https://beta.ruff.rs/docs/rules/suppressible-exception/
    "SIM105",
    # https://beta.ruff.rs/docs/rules/open-file-with-context-handler/
    "SIM115",
    # https://docs.astral.sh/ruff/rules/needless-bool/
    "SIM103",
    # https://docs.astral.sh/ruff/rules/abstract-base-class-without-abstract-method/
    "B024",
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 12

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["apigateway"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

# [tool.ruff.pep8-naming]

# https://import-linter.readthedocs.io/en/stable/contract_types.html
[tool.importlinter]
root_package = "apigateway"
include_external_packages = true

[[tool.importlinter.contracts]]
id="global-layers"
name="global-layers"
type="layers"
layers = [
    "apigateway.apis",
    "apigateway.biz",
    "apigateway.controller",
    "apigateway.service",
    "apigateway.components",
    "apigateway.apps",
    "apigateway.core",
    "apigateway.common",
    "apigateway.utils",
]
ignore_imports = [
    # 可信的依赖
    "apigateway.common.permissions.permissions -> apigateway.core.models",
    "apigateway.common.permissions.permissions -> apigateway.core.constants",
    "apigateway.common.factories.schema -> apigateway.core.constants",
    # 可忽略的依赖
    # -- accepted django command entrypoints
    "apigateway.core.management.commands.* -> apigateway.biz.**",
    "apigateway.core.management.commands.update_jwt_key -> apigateway.service.gateway_jwt",
    "apigateway.apps.gateway.management.commands.revoke_gateways -> apigateway.biz.gateway",
    "apigateway.apps.gateway.management.commands.revoke_gateways -> apigateway.controller.publisher.publish",
    "apigateway.apps.gateway.management.commands.revoke_stage -> apigateway.controller.publisher.publish",
    "apigateway.apps.data_plane.management.commands.* -> apigateway.controller.tasks.*",
    "apigateway.apps.data_plane.management.commands.* -> apigateway.controller.constants",
    "apigateway.apps.data_plane.management.commands.create_data_plane -> apigateway.controller.distributor.etcd",
    "apigateway.apps.bk_itsm.management.commands.* -> apigateway.components.bkitsm",
    # -- celery task
    "apigateway.apps.permission.tasks -> apigateway.components.*",
    "apigateway.apps.permission.tasks -> apigateway.biz.permission",
    "apigateway.apps.gateway.tasks -> apigateway.components.*",
    "apigateway.apps.gateway.tasks -> apigateway.biz.gateway",
    "apigateway.apps.monitor.tasks -> apigateway.service.alert_flow",
    "apigateway.apps.metrics.tasks -> apigateway.service.statistics",
    "apigateway.apps.support.task -> apigateway.biz.ai",
    "apigateway.apps.mcp_server.tasks -> apigateway.biz.mcp_server",
    "apigateway.apps.mcp_server.tasks -> apigateway.biz.mcp_server",
    "apigateway.apps.mcp_server.tasks -> apigateway.service.release",
    # -- esb legacy
    "apigateway.apps.esb.*.* -> apigateway.biz.*",
    "apigateway.apps.esb.*.* -> apigateway.biz.*.*",
    "apigateway.apps.esb.component.convertor -> apigateway.components.esb_components",
    "apigateway.apps.esb.status.es_client -> apigateway.service.es",
    # 需要重构的依赖
]

[[tool.importlinter.contracts]]
id="service-package-public-api"
name="service-package-public-api"
type="forbidden"
source_modules = [
    "apigateway.account.**",
    "apigateway.apigateway.**",
    "apigateway.apis.**",
    "apigateway.apps.**",
    "apigateway.biz.**",
    "apigateway.common.**",
    "apigateway.components.**",
    "apigateway.conf.**",
    "apigateway.controller.**",
    "apigateway.core.**",
    "apigateway.editions.**",
    "apigateway.healthz.**",
    "apigateway.schema.**",
    "apigateway.tests.**",
    "apigateway.tracing.**",
    "apigateway.utils.**",
]
forbidden_modules = [
    "apigateway.service.*.*",
    "apigateway.service.*.*.*",
]
allow_indirect_imports = true
as_packages = false

[[tool.importlinter.contracts]]
id="biz-package-public-api"
name="biz-package-public-api"
type="forbidden"
source_modules = [
    "apigateway.apis.**",
    "apigateway.apps.**",
]
forbidden_modules = [
    "apigateway.biz.sdk.constants",
    "apigateway.biz.sdk.gateway_sdk",
    "apigateway.biz.sdk.helper",
    "apigateway.biz.sdk.models",
    "apigateway.biz.sdk.*.*",
    "apigateway.biz.sdk.*.*.*",
    "apigateway.biz.resource.models",
    "apigateway.biz.resource.openapi_schema",
    "apigateway.biz.resource.proxy",
    "apigateway.biz.resource.resource",
    "apigateway.biz.resource.savers",
    "apigateway.biz.resource.*.*",
    "apigateway.biz.resource.*.*.*",
    "apigateway.biz.resource_doc.archive_factory",
    "apigateway.biz.resource_doc.exceptions",
    "apigateway.biz.resource_doc.resource_doc",
    "apigateway.biz.resource_doc.*.*",
    "apigateway.biz.resource_doc.*.*.*",
    "apigateway.biz.resource_version.*",
    "apigateway.biz.resource_version.*.*",
    "apigateway.biz.released_resource_doc.*",
    "apigateway.biz.released_resource_doc.*.*",
    "apigateway.biz.access_log.*",
    "apigateway.biz.access_log.*.*",
    "apigateway.biz.ai.*",
    "apigateway.biz.ai.*.*",
    "apigateway.biz.gateway.*",
    "apigateway.biz.gateway.*.*",
    "apigateway.biz.mcp_server.*",
    "apigateway.biz.mcp_server.*.*",
    "apigateway.biz.mcp_server_log.*",
    "apigateway.biz.mcp_server_log.*.*",
    "apigateway.biz.release.*",
    "apigateway.biz.release.*.*",
    "apigateway.biz.esb.board_config",
    "apigateway.biz.esb.component_resource_binding",
    "apigateway.biz.esb.decorators",
    "apigateway.biz.esb.permissions",
    "apigateway.biz.esb.system_doc_category",
    "apigateway.biz.esb.*.*",
    "apigateway.biz.esb.*.*.*",
]
allow_indirect_imports = true
as_packages = false

[[tool.importlinter.contracts]]
id="api-layers"
name="api-layers"
type="independence"
modules = [
    "apigateway.apis.open",
    "apigateway.apis.web",
    "apigateway.apis.v2.inner",
    "apigateway.apis.v2.sync",
    "apigateway.apis.v2.open",
]


[[tool.importlinter.contracts]]
id="data-source-layer"
name="data-source-layer"
type="independence"
modules = [
    "apigateway.apps",
    "apigateway.core",
    "apigateway.components",
]
ignore_imports = [
    # 可信的依赖
    "apigateway.apps.*.* -> apigateway.core.*",
    # 可忽略的依赖
    # -- celery task
    "apigateway.apps.permission.tasks -> apigateway.components.*",
    "apigateway.apps.permission.tasks -> apigateway.biz.permission",
    "apigateway.apps.gateway.tasks -> apigateway.components.*",
    "apigateway.apps.gateway.tasks -> apigateway.biz.gateway",
    "apigateway.apps.monitor.tasks -> apigateway.service.alert_flow",
    "apigateway.apps.metrics.tasks -> apigateway.service.statistics",
    "apigateway.apps.support.task -> apigateway.biz.ai",
    "apigateway.apps.mcp_server.tasks -> apigateway.biz.mcp_server",
    "apigateway.apps.mcp_server.tasks -> apigateway.biz.mcp_server",
    "apigateway.apps.mcp_server.tasks -> apigateway.service.release",
    # -- django commands
    "apigateway.apps.*.management.commands.* -> apigateway.core.models",
    "apigateway.apps.*.management.commands.* -> apigateway.core.constants",
    "apigateway.core.management.commands.* -> apigateway.biz.gateway",
    "apigateway.apps.gateway.management.commands.revoke_gateways -> apigateway.biz.gateway",
    "apigateway.apps.gateway.management.commands.revoke_gateways -> apigateway.controller.publisher.publish",
    "apigateway.apps.gateway.management.commands.revoke_gateways -> apigateway.core.constants",
    "apigateway.apps.gateway.management.commands.revoke_stage -> apigateway.controller.publisher.publish",
    "apigateway.apps.gateway.management.commands.revoke_stage -> apigateway.core.constants",
    "apigateway.apps.gateway.management.commands.export_inactive_gateways_by_stage -> apigateway.core.constants",
    "apigateway.apps.data_plane.management.commands.* -> apigateway.controller.tasks.*",
    "apigateway.apps.data_plane.management.commands.create_data_plane -> apigateway.controller.distributor.etcd",
    "apigateway.apps.plugin.management.commands.export_plugin_binding_statistics -> apigateway.core.constants",
    "apigateway.apps.bk_itsm.management.commands.* -> apigateway.components.bkitsm",
    # -- esb legacy
    "apigateway.apps.esb.*.* -> apigateway.core.models",
    "apigateway.apps.esb.*.* -> apigateway.core.constants",
    "apigateway.apps.esb.*.* -> apigateway.biz.*",
    "apigateway.apps.esb.*.* -> apigateway.biz.*.*",
    "apigateway.apps.esb.*.* -> apigateway.components.*",
    "apigateway.apps.esb.status.es_client -> apigateway.service.es",
]

[[tool.importlinter.contracts]]
id="biz-domain-independence"
name="biz-domain-independence"
type="independence"
modules = [
    "apigateway.biz.gateway",
    "apigateway.biz.resource",
    "apigateway.biz.permission",
    "apigateway.biz.mcp_server",
]
