[tool.poetry]
name = "esb"
version = "2.11.20"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.6.2 || ~3.7"
dataclasses = {version = "^0.7", python = "~3.6.1", optional = true}
Django = "1.11.29"
gevent = "1.4.0"
requests = "2.27.1"
arrow = "0.14.4"
cachetools = "4.2.4"
jinja2 = "2.11.3"
markdown = "3.3.7"
markupsafe = "1.1.1"
pyasn1 = "0.4.8"
pycparser = "2.20"
pygments = "2.1.3"
pyjwt = "1.7.1"
mysqlclient = "2.0.1"
python-dateutil = "2.8.1"
pytz = "2016.6.1"
six = "1.15.0"
sqlalchemy = "1.4.29"
thrift = "0.10.0"
concurrent-log-handler = "0.9.24"
gunicorn = "19.9.0"
PyYAML = "5.4.1"
Pygments = "2.1.3"
django-environ = "0.4.5"
future = "0.18.2"
jsonfield = "2.0.1"
importlib-metadata = "4.8.3"
greenlet = "0.4.16"
blue-krill = "1.0.5"
cryptography = "3.4.8"
django-prometheus = "^2.1.0"
tencent-apigateway-common = "0.1.11"
apigw-manager = "1.0.1"

[tool.poetry.dev-dependencies]
coverage = "4.5.4"
django-dynamic-fixture = "3.1.0"
pytest = "5.4.3"
pytest-cov = "2.10.0"
pytest-django = "3.9.0"
pytest-benchmark = "3.2.3"
pytest-mock = "3.3.1"
Faker = "8.1.1"
responses = "0.10.14"
pre-commit = "2.11.1"
flake8 = "3.8.3"
isort = "5.4.2"
mypy = "*"
black = "20.8b1"
mock = "3.0.5"
ipython = "^7"
tox = "^3.23.0"
types-requests = "^2.28.11.16"
types-cachetools = "^5.3.0.4"
types-Markdown = "3.4.2.9"
types-PyYAML = "6.0.12.9"
types-chardet = "5.0.4.6"
ruff = {version = "^0.0.259", python = "~3.7.0"}

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[tool.black]
line-length = 119
force-exclude = '''
/(
  node_modules/.*
  | migrations
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
skip_glob = ["*/migrations/**", "esb/lib/gse/**"]
profile = "black"
src_paths = ["common", "esb"]

[tool.mypy]
ignore_missing_imports = true
follow_imports="skip"
show_error_codes = true
strict_optional=true
pretty=true
exclude = '''(?x)(
    editions.*\.py$
)'''

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.conf.*",
]
ignore_errors = true

[tool.flake8]
ignore = "W503,E203,E741,F841"
max-line-length = 119
max-complexity = 12
format = "pylint"
show_source = "true"
statistics = "true"
count = "true"
exclude = "*migrations*,*.pyc,.git,__pycache__,venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W"]
ignore = ["E741", "F841"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "esb/lib/gse/*",
]

# Same as Black.
line-length = 119

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 12
